--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "author": "salsabil",
   "license": "MIT",
+  "engines": {
+    "node": "14.15.1"
+  },
   "bugs": {
     "url": "https://github.com/salsabilmislat/city-explorer-api/issues"
   },
